# SwingTool

./: .gitignore  README.md  pyproject.toml  requirements.txt
swingtool/: __init__.py  __main__.py  cli.py  config.py  ingest.py  render.py  schema.py
swingtool/analysis/: __init__.py  ballflight.py  clubpath.py  schema.py  spatial.py  stage.py
swingtool/depth/: __init__.py  depth_model.py  schema.py  stage.py
swingtool/detect/: __init__.py  detector.py  schema.py  stage.py
swingtool/metrics/: __init__.py  engine.py  events.py  geometry.py  schema.py  signals.py  summary.py
swingtool/pose/: __init__.py  detector.py  estimator.py
swingtool/report/: __init__.py  engine.py  references_v1.json  schema.py  stage.py  summary.py
tests/: test_analysis_clubpath.py  test_analysis_spatial.py  test_analysis_stage.py  test_ballflight.py  test_cli.py  test_ingest.py  test_metrics_compute.py  test_metrics_events.py  test_metrics_geometry.py  test_render.py  test_report_config.py  test_report_engine.py  test_schema.py
