[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "swingtool"
version = "0.1.0"
description = "Computer-vision analysis of golf swings from a single phone video."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

[tool.setuptools.packages.find]
include = ["swingtool*"]

[tool.setuptools.package-data]
"swingtool.report" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
